# swype

./: CMakeLists.txt  README.md  app.manifest
GGhost/: CMakeLists.txt
GGhost/include/: ggh.hpp  ic.hpp  obf.hpp  spf.hpp  sys.hpp
GGhost/src/: ggh.cpp  ic.cpp  obf.cpp  spf.cpp  sys.cpp  syscalls.asm
src/: console.h  core.h  main.cpp  methods.h  offsets.h
