cmake_minimum_required(VERSION 3.10)
project(swype)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(GGhost)
add_executable(swype src/main.cpp)
if(MSVC)
    set_target_properties(swype PROPERTIES LINK_FLAGS "/MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\" /MANIFESTDEPENDENCY:\"type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='*' publicKeyToken='6595b64144ccf1df' language='*'\"")
endif()
target_link_libraries(swype PRIVATE GGhost)